--- a/blogs/2020-02-11.md
+++ b/blogs/2020-02-11.md
@@ -1,6 +1,7 @@
 ---
 layout: blog
 type: blog
+image: images/blog/2020-2/11arduino.jpg
 title: Hello World!~
 # All dates must be YYYY-MM-DD format!
 date: 2020-02-11
